configuracao novo servidor

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,8 +4,8 @@
     <string name="title_activity_main2">ELL Reader</string>
     <string name="title_activity_cadastrar_user">ELL Reader</string>
     <string name="title_activity_abrir_livro_web">ELL Reader</string>
-    <string name="endServidor">http://10.107.144.15/20171sem/EllReaderWEB/</string>
+    <!-- <string name="endServidor">http://10.107.144.15/20171sem/EllReaderWEB/</string> -->
     <string name="title_activity_config">configActivity</string>
     <!--  <string name="endServidor">http://10.107.134.16/EllReaderWEB/</string>-->
-    <!-- <string name="endServidor">http://sample-env-2.p72absbyrf.us-west-2.elasticbeanstalk.com/</string>-->
+    <string name="endServidor">http://outsidethebx.com.br/EllReaderWeb/</string>
 </resources>
